tests/fail/fun_literal_return.py
def f() -> 23:
    """ This function only returns 23"""
    return 20  # Return is incorrect, only '23' is allowed
